# fcitx5-unikey

./: .gitignore  CMakeLists.txt  Messages.sh  README  org.fcitx.Fcitx5.Addon.Unikey.metainfo.xml.in  org.fcitx.fcitx5-unikey.metainfo.xml.in
.github/workflows/: check.yml
data/: CMakeLists.txt
keymap-editor/: CMakeLists.txt  actions.cpp  actions.h  editor.cpp  editor.h  editor.ui  keymap-editor.json  main.cpp  main.h  model.cpp  model.h
macro-editor/: CMakeLists.txt  dialog.cpp  dialog.h  editor.cpp  editor.h  editor.ui  macro-editor.json  main.cpp  main.h  model.cpp  model.h
po/: CMakeLists.txt  LINGUAS  ca.po  da.po  de.po  fcitx5-unikey.pot  fr.po  he.po  ja.po  ka.po  ko.po  ru.po  tr.po  vi.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  unikey-addon.conf.in  unikey-addon.conf.in.in  unikey-config.h  unikey-im.cpp  unikey-im.h  unikey.conf.in
test/: CMakeLists.txt  testdir.h.in  testunikey.cpp
test/addon/: CMakeLists.txt
test/inputmethod/: CMakeLists.txt
unikey/: CMakeLists.txt  byteio.cpp  byteio.h  charset.cpp  charset.h  convert.cpp  data.cpp  data.h  error.cpp  inputproc.cpp  inputproc.h  keycons.h  mactab.cpp  mactab.h  pattern.cpp  pattern.h  ukengine.cpp  ukengine.h  unikeyinputcontext.cpp  unikeyinputcontext.h  usrkeymap.cpp  usrkeymap.h  vnconv.h  vnlexi.h
